Opened 18 years ago

Closed 18 years ago

Last modified 18 years ago

#1029 closed bug (fixed)

Rendering problems with updated mesa

Reported by: ekdahl Owned by: korli
Priority: normal Milestone: R1
Component: Kits/OpenGL Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

It's like alpha isn't working. Previous version did not show this behavior. See attached screenshot to see what I mean.

Attachments (2)

mesa_problem.png (56.3 KB ) - added by ekdahl 18 years ago.
reallyslick.zip (313.8 KB ) - added by ekdahl 18 years ago.
Some of these savers show this defect, especially Flux. To be extracted in 3rdparty.

Download all attachments as: .zip

Change History (7)

by ekdahl, 18 years ago

Attachment: mesa_problem.png added

comment:1 by korli, 18 years ago

I didn't notice this as I tested only with GLTeapot. Could you clear out the test application or the way to reproduce, and also the SVN revision ? Thanks.

in reply to:  1 ; comment:2 by ekdahl, 18 years ago

Replying to korli:

I didn't notice this as I tested only with GLTeapot. Could you clear out the test application or the way to reproduce, and also the SVN revision ? Thanks.

I'd guess it's hrev20170, from monday night anyway. The app is a screensaver called Flux from http://www.reallyslick.com (see picture there to see how it should look like). I could send you the port of the screensavers tonight when I get home so you can see for yourself (but beware, they're not finished..).

in reply to:  2 comment:3 by korli, 18 years ago

Replying to ekdahl:

Replying to korli:

I'd guess it's hrev20170, from monday night anyway. The app is a screensaver called Flux from http://www.reallyslick.com (see picture there to see how it should look like). I could send you the port of the screensavers tonight when I get home so you can see for yourself (but beware, they're not finished..).

Please be sure to attach the testcase screensaver to this bug, or provide another testcase (a simple app using GL would be best). Thanks.

by ekdahl, 18 years ago

Attachment: reallyslick.zip added

Some of these savers show this defect, especially Flux. To be extracted in 3rdparty.

comment:4 by korli, 18 years ago

Resolution: fixed
Status: newclosed

Applied a fix in hrev20201. Though I had to add the flag BGL_ALPHA to the BGLView constructor in the screen saver testcase. Please test again with this revision and the additional flag.

in reply to:  4 comment:5 by ekdahl, 18 years ago

Replying to korli:

Applied a fix in hrev20201. Though I had to add the flag BGL_ALPHA to the BGLView constructor in the screen saver testcase. Please test again with this revision and the additional flag.

Thank you! I actually had BGL_ALPHA there before, but removed it since it made no difference until the latest mesa update. It's working fine now since your fix and I've added the flag again. BTW, do you have any clue as to why the screensavers are crashing when quitting? Been trying to find that for several weeks without much luck..

Note: See TracTickets for help on using tickets.