actually activates alpha on _mesa_add_soft_renderbuffers this fixes bug #1029, though make sure to use BGL_ALPHA flag with BGLView constructor

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20201 a95241bf-73f2-0310-859d-f6bbb57e9c96